Homework 6: OpenApi + Security
