# controller/src/main/java/ru/digdes/school/controller/EmployeeController.java
@@ -5,13 +5,12 @@ import jakarta.validation.Valid;
 import org.springframework.data.domain.Page;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-import ru.digdes.school.dto.employee.DeleteEmployeeDto;
-import ru.digdes.school.dto.employee.EmployeeDto;
-import ru.digdes.school.dto.employee.EmployeeFilterObject;
-import ru.digdes.school.dto.employee.EmployeePaging;
+import ru.digdes.school.dto.employee.*;
 import ru.digdes.school.service.BasicService;
 import ru.digdes.school.service.GetService;
+import ru.digdes.school.service.impl.EmployeeServiceImpl;
 
 @CrossOrigin(origins = "*", allowedHeaders = "*")
 @RestController
@@ -23,45 +22,56 @@ public class EmployeeController {
         this.employeeService = employeeService;
     }
 
-    @PostMapping
     @Operation(description = "Создать сотрудника")
+    @PostMapping
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<EmployeeDto> createEmployee(@Valid @RequestBody EmployeeDto employeeDto) {
         return ResponseEntity.status(HttpStatus.CREATED)
                 .body(employeeService.create(employeeDto));
     }
 
-    @GetMapping("/search")
     @Operation(description = "Найти сотрудников")
+    @GetMapping("/search")
     public ResponseEntity<Page<EmployeeDto>> search(EmployeePaging employeePaging,
                                                     EmployeeFilterObject employeeFilterObject) {
         return ResponseEntity.ok(employeeService.search(employeePaging, employeeFilterObject));
     }
 
 
-    @GetMapping("/id/{id}")
     @Operation(description = "Получить сотрудника по идентификатору")
+    @GetMapping("/id/{id}")
     public ResponseEntity<EmployeeDto> getById(@PathVariable Long id) {
         return ResponseEntity.ok(((GetService<EmployeeDto>) employeeService).getOneById(id));
     }
 
 
-    @GetMapping("/account/{account}")
     @Operation(description = "Получить сотрудника по УЗ")
+    @GetMapping("/account/{account}")
     public ResponseEntity<EmployeeDto> getByAccount(@PathVariable String account) {
         return ResponseEntity.ok(((GetService<EmployeeDto>) employeeService).getOneByStringValue(account));
     }
 
-    @PatchMapping
     @Operation(description = "Изменить данные сотрудника")
+    @PatchMapping
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<EmployeeDto> updateEmployee(@RequestBody EmployeeDto employeeDto) {
-            return ResponseEntity.status(HttpStatus.OK)
-                    .body(employeeService.update(employeeDto));
+        return ResponseEntity.status(HttpStatus.OK)
+                .body(employeeService.update(employeeDto));
     }
 
-    @DeleteMapping
     @Operation(description = "Перевести сотрудника в статус 'Удалён'")
+    @DeleteMapping
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<String> deleteEmployee(DeleteEmployeeDto deleteEmployeeDto) {
-            return ResponseEntity.status(HttpStatus.OK)
-                    .body(employeeService.changeState(deleteEmployeeDto));
+        return ResponseEntity.status(HttpStatus.OK)
+                .body(employeeService.changeState(deleteEmployeeDto));
+    }
+
+    @Operation(description = "Изменить роль сотрудника в системе. Доступна только администраторам")
+    @PatchMapping("/role")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<SystemRolePatchDto> chahgeSystemRole(@RequestBody SystemRolePatchDto systemRolePatchDto) {
+        return ResponseEntity.ok(((EmployeeServiceImpl) employeeService)
+                .changeSystemRole(systemRolePatchDto));
     }
 }
